# Omnidirectional-mobile-robot

./: .gitignore  CMakeLists.txt  CMakePresets.json
docs/: CubeMX工程配置计划.md  FreeRTOS框架规划.md  findings.md  g2_g3_experiment_procedure.md  g3_speed_estimation_design.md  imu_capture_procedure.md  m2_control_architecture_gate.md  m2_g1_control_resource_audit.md  plan_review_and_directives.md  progress.md  project_roadmap_review.md  serial_capture_tool.md  task_plan.md
firmware/r750_mec_cubemx/: R750_MEC_Lower.ioc  cubemx_generate.txt
firmware/r750_mec_cubemx/R750_MEC_Lower/: CMakeLists.txt  R750_MEC_Lower.ioc  STM32F407XX_FLASH.ld
firmware/r750_mec_cubemx/R750_MEC_Lower/App/Bsp/Inc/: bsp.h  bsp_adc.h  bsp_beep.h  bsp_encoder.h  bsp_imu.h  bsp_motor.h  bsp_types.h  bsp_uart.h  bsp_uart_tx_queue.h
firmware/r750_mec_cubemx/R750_MEC_Lower/App/Bsp/Src/: bsp.c  bsp_adc.c  bsp_beep.c  bsp_encoder.c  bsp_imu.c  bsp_motor.c  bsp_uart.c  bsp_uart_tx_queue.c
firmware/r750_mec_cubemx/R750_MEC_Lower/App/Inc/: app.h  app_comm_protocol.h  app_control_tick_buffer.h  app_control_timebase.h  app_control_timing.h  app_debug_uart_config.h  app_encoder_accumulator.h  app_encoder_period_accumulator.h  app_imu.h  app_imu_capture.h  app_motion_gate.h  app_motor_capture.h  app_motor_open_loop.h  app_safety_policy.h  app_speed_capture.h  app_tasks.h  app_telemetry.h  app_wheel_speed_estimator.h  imu_eskf.h  robot_config.h
firmware/r750_mec_cubemx/R750_MEC_Lower/App/Src/: app.c  app_comm_protocol.c  app_control_tick_buffer.c  app_control_timebase.c  app_control_timing.c  app_encoder_accumulator.c  app_encoder_period_accumulator.c  app_imu.c  app_imu_capture.c  app_motion_gate.c  app_motor_capture.c  app_motor_open_loop.c  app_safety_policy.c  app_speed_capture.c  app_tasks.c  app_telemetry.c  app_wheel_speed_estimator.c  imu_eskf.c
firmware/r750_mec_cubemx/R750_MEC_Lower/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h  tim.h
firmware/r750_mec_cubemx/R750_MEC_Lower/Core/Src/: adc.c  freertos.c  gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
firmware/r750_mec_cubemx/R750_MEC_Lower/cmake/: gcc-arm-none-eabi.cmake
firmware/r750_mec_cubemx/R750_MEC_Lower/cmake/stm32cubemx/: CMakeLists.txt
tests/: CMakeLists.txt  test_app_comm_protocol.c  test_app_control_tick_buffer.c  test_app_control_timing.c  test_app_debug_uart_config.c  test_app_encoder_accumulator.c  test_app_encoder_period_accumulator.c  test_app_imu.c  test_app_imu_capture.c  test_app_motion_gate.c  test_app_motor_capture.c  test_app_motor_open_loop.c  test_app_safety_policy.c  test_app_speed_capture.c  test_app_telemetry.c  test_app_wheel_speed_estimator.c  test_bsp_uart_async.c  test_bsp_uart_tx_queue.c  test_g2_dynamic_step.ps1  test_g2_experiment_tools.ps1  test_g2_high_pwm_validation.ps1  test_g2_low_speed_diagnostic.ps1  test_g3_speed_capture_analysis.ps1  test_imu_capture_analysis.ps1  test_imu_eskf.c  test_motor_capture_analysis.ps1  test_robot_config.c  test_serial_capture.ps1
tests/stubs/: cmsis_os.h  main.h  usart.h
tools/: analyze_g2_capture.ps1  analyze_g2_dynamic_step.ps1  analyze_g2_low_speed_diagnostic.ps1  analyze_g2_operating_point.ps1  analyze_g3_speed_capture.ps1  analyze_imu_capture.ps1  analyze_motor_capture.ps1  capture_serial.ps1  check_g2_dynamic_cross_repeat.ps1  classify_g2_deadzone_capture.ps1  g2_dynamic_step_lib.ps1  g2_experiment_lib.ps1  g2_high_pwm_validation_lib.ps1  g2_low_speed_diagnostic_lib.ps1  g3_speed_capture_analysis_lib.ps1  motor_capture_analysis_lib.ps1  new_g2_deadzone_probe_plan.ps1  new_g2_dynamic_step_batch.ps1  new_g2_dynamic_step_plan.ps1  new_g2_first_motion_plan.ps1  new_g2_high_pwm_validation_batch.ps1  new_g2_high_pwm_validation_plan.ps1  new_g2_low_speed_validation_batch.ps1  new_g3_speed_hand_turn_plan.ps1  new_motor_capture_timing_plan.ps1  run_host_tests.ps1  serial_capture_lib.ps1  serial_capture_raw.ps1  summarize_g2_dynamic_step_batch.ps1  summarize_g2_high_pwm_validation_batch.ps1  summarize_g2_repeatability.ps1
